# rugistry

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml
rugistry-frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.app.json  vite.config.ts
rugistry-frontend/src/: App.svelte  app.css
rugistry-frontend/src/components/: MonacoEditor.svelte  Navbar.svelte
rugistry-service/: .env.example  Cargo.toml  Dockerfile
rugistry-service/migrations/: 001_initial_schema.sql  002_add_password_auth.sql  003_space_ownership.sql  004_webhooks.sql
rugistry-service/src/: main.rs
rugistry-service/src/application/: mod.rs
rugistry-service/src/application/dto/: mod.rs
rugistry-service/src/application/services/: mod.rs  registry_service.rs  space_service.rs  webhook_service.rs
rugistry-service/src/domain/: mod.rs
rugistry-service/src/domain/entities/: mod.rs  registry_entry.rs  space.rs  user.rs  webhook.rs
rugistry-service/src/domain/repositories/: mod.rs
rugistry-service/src/infrastructure/: mod.rs
rugistry-service/src/infrastructure/auth/: mod.rs
rugistry-service/src/infrastructure/database/: migrations.rs  mod.rs  registry_repository.rs  space_repository.rs  webhook_repository.rs
rugistry-service/src/infrastructure/events/: mod.rs
rugistry-service/src/presentation/: mod.rs  routes.rs
rugistry-service/src/presentation/handlers/: auth_handlers.rs  mod.rs  registry_handlers.rs  space_handlers.rs  webhook_handlers.rs  websocket_handlers.rs
(+6 files in other folders)
